2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.94, Interface version 0.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Utilities/atlas_convert.cpp: Add header required for getopt
	  by some systems.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Improve the efficiency of addToMessage()
	  by avoiding a call to getFoo() when we already have checked the
	  flag.

	* Atlas/Objects/AttributeInfo.py: Improve the efficiency of
	  sendFoo() by avoiding a call to getFoo() when we already have
	  checked the flag.

	* configure.ac: Increment the version for a bugfix release.

2005-04-17  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Force parents and objtype to be included
	  when converting an Objects instance to a Message instance.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.93, Interface version 0.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: Include the atlas-convert tool in the rpm spec.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: rpm spec cleanups, including using system
	  defined compiler optimisations.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove some obsolete code relating to version.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Make some local veriable in the C++ iterate
	  method static for efficiency.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Update AC_INIT args to tarball name is set correctly.

2005-04-16  Al Riddoch  <alriddoch@zepler.org>

	* tutorial/example/DebugBridge.h, tutorial/example/configure.ac,
	  tutorial/example/simple_client.cpp,
	  tutorial/example/simple_server.cpp: Bring the tutorial code up to
	  date.

	* configure.ac: Make the autoconf macros a little cleaner, and
	  increment version for release.

2005-04-13  Al Riddoch  <alriddoch@zepler.org>
